Add SVG support to ImageBrowser
This commit enables the display of SVGs in the `ImageBrowser`.
When both a PNG and an SVG version of an icon are present, only the SVG will be shown. To allow this behavior a new filter is introduced which decides depending on the coming icons in the cache and existing filters if a PNG should be added or suppressed.
Using the existing text pattern filter to only view specific icons (e.g. "*.png" for only PNGs) continues to work as expected with this implementation.

Add SVG support to ImageBrowser

This commit enables the display of SVGs in the `ImageBrowser`.
When both a PNG and an SVG version of an icon are present, only the SVG will be shown. To allow this behavior a new filter is introduced which decides depending on the coming icons in the cache and existing filters if a PNG should be added or suppressed.
Using the existing text pattern filter to only view specific icons (e.g. "*.png" for only PNGs) continues to work as expected with this implementation.